prevent scrollbar jumps

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,6 +125,7 @@ pre {
   width: 920px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: calc(100vw - 100%);
 }
 
 .header {
